# signate-competition-991

./: Dockerfile  compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/: .gitignore  boosting.ipynb  pycaret.ipynb
